<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_view_survey_title"
        style="@style/feature.featureTitleText"
        android:text="@string/text_view_survey_title"
        app:layout_constraintBottom_toTopOf="@id/text_view_survey_explanation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/text_view_survey_explanation"
        style="@style/feature.featureExplanationText"
        android:text="@string/text_view_survey_explanation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/text_view_survey_title"
        app:layout_constraintRight_toRightOf="@id/text_view_survey_title"
        app:layout_constraintTop_toBottomOf="@id/text_view_survey_title" />

    <Button
        android:id="@+id/button_survey_begin"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/material_design_margin"
        android:background="@drawable/bg_rounded_button"
        android:text="@string/button_text_begin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:transitionName="robot"/>
</android.support.constraint.ConstraintLayout>
